tests/fixtures/syntax/invalid/file_contents_equals_subject_fixture_reference.repor
case "file checkpoint subject requires a workspace path literal, not a fixture reference, regardless of predicate" {
  $ true
  assert {
    file @"actual.txt" contents_equals @"expected.txt"
  }
}
